@@ -605,7 +605,19 @@ public final class AuthenticationConstants {
          *
          * @see <a href="https://identitydivision.visualstudio.com/DevEx/_git/AuthLibrariesApiReview?path=/%5BAndroid%5D%20Broker%20API/broker_protocol_versions.md">Android Auth Broker Protocol Versions</a>
          */
-        public static final String MSAL_TO_BROKER_PROTOCOL_VERSION_CODE = "12.0";
+        public static final String LATEST_MSAL_TO_BROKER_PROTOCOL_VERSION_CODE = "13.0";
+
+        /**
+         * The maximum msal-to-broker protocol version known by clients such as MSAL Android.
+         */
+        public static final String CLIENT_MAX_PROTOCOL_VERSION = LATEST_MSAL_TO_BROKER_PROTOCOL_VERSION_CODE;
+
+        /**
+         * The maximum broker protocol version known by Broker. This is a default value that can be
+         * used by the broker, however, broker may choose to override this value and use a higher
+         * value during handshake based on a flight.
+         */
+        public static final String DEFAULT_MAX_BROKER_PROTOCOL_VERSION = "12.0";
 
         /**
          * A client id for requesting the SSO token.
